some styling and additional content

--- a/index.html
+++ b/index.html
@@ -1,5 +1,14 @@
 </html>
+<title>
+JankeeMunkey.com
+</title>
+<head>
+	<link rel="stylesheet" href="index.css">
+</head>
 <h1>
-This is the beginning to the journey.
+Munkey the Jank
 </h1>
+<body>
+This is the beginning to the journey.
+</body>
 </html>
