--- a/index.html
+++ b/index.html
@@ -1,14 +1,19 @@
 </html>
-<title>
-JankeeMunkey.com
-</title>
 <head>
 	<link rel="stylesheet" href="index.css">
+	<title>
+	JankeeMunkey.com
+	</title>
 </head>
-<h1>
-Munkey the Jank
-</h1>
 <body>
-This is the beginning to the journey.
+<div class="header">
+<p>JankeeMunkey
+<p>This is the beginning to the journey.
+</div>
+
+<div class="fixed-footer">
+<div class="container">2020 JankeeMunkey &copy;
+</div>
+
 </body>
 </html>
