--- a/index.html
+++ b/index.html
@@ -1,19 +1,20 @@
 </html>
 <head>
 	<link rel="stylesheet" href="index.css">
-	<title>
-	JankeeMunkey.com
-	</title>
+	<title>JankeeMunkey.com</title>
+	<div class="header">
+	<p>JankeeMunkey
+	<p>This is the beginning to the journey.
+	</div>
 </head>
 <body>
-<div class="header">
-<p>JankeeMunkey
-<p>This is the beginning to the journey.
-</div>
-
-<div class="fixed-footer">
-<div class="container">2020 JankeeMunkey &copy;
-</div>
-
+	<p>1
+	<p>2
+	<p>3
+	<p>4
+	<p>5
+	<div class="fixed-footer">
+	<div class="container">JankeeMunkey 2020 &copy;
+	</div>
 </body>
 </html>
