--- a/index.html
+++ b/index.html
@@ -4,15 +4,20 @@
 	<title>JankeeMunkey.com</title>
 	<div class="header">
 	<p>JankeeMunkey
-	<p>This is the beginning to the journey.
-	</div>
+	<nav>
+		<a href="#">Home</a>
+		<a href="#">About</a>
+		<a href="#">Topics</a>
+		<a href="#">Contact</a>
+	</nav>
+    </div>
 </head>
 <body>
-	<p>1
-	<p>2
-	<p>3
-	<p>4
-	<p>5
+	<p>This
+	<p>Is
+	<p>Just
+	<p>The
+	<p>Beginning.
 	<div class="fixed-footer">
 	<div class="container">JankeeMunkey 2020 &copy;
 	</div>
