fixed formatting again

--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
 	<p>Just
 	<p>The
 	<p>Beginning.
+	<p>This
+	<p>Is
+	<p>Just
+	<p>The
+	<p>Beginning.
 	<div class="fixed-footer">
 	<div class="container">JankeeMunkey 2020 &copy;
 	</div>
