--- a/404.html
+++ b/404.html
@@ -13,31 +13,31 @@
     <meta property="og:title" content="404 Page not found :: Skylar Houghton">
     <meta property="og:description" content="">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://shoutsky.com/404.html">
+    <meta property="og:url" content="https://skylarhoughtongithub.github.io/static-jank-site/404.html">
     <meta property="og:site_name" content="Skylar Houghton">
     <title>404 Page not found :: Skylar Houghton</title>
-    <base href="https://shoutsky.com/">
+    <base href="https://skylarhoughtongithub.github.io/static-jank-site/">
     <!-- https://github.com/filamentgroup/loadCSS/blob/master/README.md#how-to-use -->
-    <link href="/css/fontawesome-all.min.css?1703042059" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/css/fontawesome-all.min.css?1703042059" rel="stylesheet"></noscript>
-    <link href="/css/nucleus.css?1703042059" rel="stylesheet">
-    <link href="/css/auto-complete.css?1703042059" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/css/auto-complete.css?1703042059" rel="stylesheet"></noscript>
-    <link href="/css/perfect-scrollbar.min.css?1703042059" rel="stylesheet">
-    <link href="/css/fonts.css?1703042059" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/css/fonts.css?1703042059" rel="stylesheet"></noscript>
-    <link href="/css/theme.css?1703042059" rel="stylesheet">
-    <link href="/css/theme-auto.css?1703042059" rel="stylesheet" id="R-variant-style">
-    <link href="/css/chroma-auto.css?1703042059" rel="stylesheet" id="R-variant-chroma-style">
-    <link href="/css/variant.css?1703042059" rel="stylesheet">
-    <link href="/css/print.css?1703042059" rel="stylesheet" media="print">
-    <link href="/css/ie.css?1703042059" rel="stylesheet">
-    <script src="/js/url.js?1703042059"></script>
-    <script src="/js/variant.js?1703042059"></script>
+    <link href="/static-jank-site/css/fontawesome-all.min.css?1703042508" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/static-jank-site/css/fontawesome-all.min.css?1703042508" rel="stylesheet"></noscript>
+    <link href="/static-jank-site/css/nucleus.css?1703042508" rel="stylesheet">
+    <link href="/static-jank-site/css/auto-complete.css?1703042508" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/static-jank-site/css/auto-complete.css?1703042508" rel="stylesheet"></noscript>
+    <link href="/static-jank-site/css/perfect-scrollbar.min.css?1703042508" rel="stylesheet">
+    <link href="/static-jank-site/css/fonts.css?1703042508" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/static-jank-site/css/fonts.css?1703042508" rel="stylesheet"></noscript>
+    <link href="/static-jank-site/css/theme.css?1703042508" rel="stylesheet">
+    <link href="/static-jank-site/css/theme-auto.css?1703042508" rel="stylesheet" id="R-variant-style">
+    <link href="/static-jank-site/css/chroma-auto.css?1703042508" rel="stylesheet" id="R-variant-chroma-style">
+    <link href="/static-jank-site/css/variant.css?1703042508" rel="stylesheet">
+    <link href="/static-jank-site/css/print.css?1703042508" rel="stylesheet" media="print">
+    <link href="/static-jank-site/css/ie.css?1703042508" rel="stylesheet">
+    <script src="/static-jank-site/js/url.js?1703042508"></script>
+    <script src="/static-jank-site/js/variant.js?1703042508"></script>
     <script>
       // hack to let hugo tell us how to get to the root when using relativeURLs, it needs to be called *url= for it to do its magic:
       // https://github.com/gohugoio/hugo/blob/145b3fcce35fbac25c7033c91c1b7ae6d1179da8/transform/urlreplacers/absurlreplacer.go#L72
       var root_url="/";
       var baseUri=root_url.replace(/\/$/, '');
       window.relearn = window.relearn || {};
-      window.relearn.baseUriFull='https:\/\/shoutsky.com/';
+      window.relearn.baseUriFull='https:\/\/skylarhoughtongithub.github.io\/static-jank-site/';
       // variant stuff
       window.relearn.themeVariantModifier='';
       window.variants && variants.init( [ 'auto' ] );
@@ -95,7 +95,7 @@
       }
     </style>
   </head>
-  <body class="mobile-support html notfound" data-url="/404.html">
+  <body class="mobile-support html notfound" data-url="/static-jank-site/404.html">
     <div id="R-body" class="default-animation">
       <main id="R-body-inner" class="chapter" tabindex="-1">
         <div class="flex-block-wrapper">
@@ -105,7 +105,7 @@
             <p></p>
             <p>Woops. Looks like this page doesn&#39;t exist ¯\_(ツ)_/¯.</p>
             <p></p>
-            <p><a href="/index.html">Go to homepage</a></p>
+            <p><a href="/static-jank-site/index.html">Go to homepage</a></p>
             <p id="shrug">
               <svg xmlns="http://www.w3.org/2000/svg"
  viewBox="0 0 512.000000 512.000000"
