--- a/home/index.html
+++ b/home/index.html
@@ -8,15 +8,15 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:title" content="Categories :: Skylar Houghton">
+    <meta name="twitter:title" content="Homes :: Skylar Houghton">
     <meta name="twitter:description" content="">
-    <meta property="og:title" content="Categories :: Skylar Houghton">
+    <meta property="og:title" content="Homes :: Skylar Houghton">
     <meta property="og:description" content="">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://skylarhoughtongithub.github.io/static-jank-site/categories/index.html">
+    <meta property="og:url" content="https://skylarhoughtongithub.github.io/static-jank-site/home/index.html">
     <meta property="og:site_name" content="Skylar Houghton">
-    <title>Categories :: Skylar Houghton</title>
-    <link href="/static-jank-site/categories/index.xml" rel="alternate" type="application/rss+xml" title="Categories :: Skylar Houghton">
+    <title>Homes :: Skylar Houghton</title>
+    <link href="/static-jank-site/home/index.xml" rel="alternate" type="application/rss+xml" title="Homes :: Skylar Houghton">
     <!-- https://github.com/filamentgroup/loadCSS/blob/master/README.md#how-to-use -->
     <link href="/static-jank-site/css/fontawesome-all.min.css?1703043252" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/static-jank-site/css/fontawesome-all.min.css?1703043252" rel="stylesheet"></noscript>
     <link href="/static-jank-site/css/nucleus.css?1703043252" rel="stylesheet">
@@ -52,7 +52,7 @@
       window.T_N_results_found = `{1} results found for "{0}"`;
     </script>
   </head>
-  <body class="mobile-support html" data-url="/static-jank-site/categories/index.html">
+  <body class="mobile-support html" data-url="/static-jank-site/home/index.html">
     <div id="R-body" class="default-animation">
       <div id="R-body-overlay"></div>
       <nav id="R-topbar">
@@ -70,7 +70,7 @@
           </div>
           <ol class="topbar-breadcrumbs breadcrumbs highlightable" itemscope itemtype="http://schema.org/BreadcrumbList"><li
             itemscope itemtype="https://schema.org/ListItem" itemprop="itemListElement"><a itemprop="item" href="/static-jank-site/index.html"><span itemprop="name">Skylar Houghton</span></a><meta itemprop="position" content="1">&nbsp;>&nbsp;</li><li
-            itemscope itemtype="https://schema.org/ListItem" itemprop="itemListElement"><span itemprop="name">Categories</span><meta itemprop="position" content="2"></li>
+            itemscope itemtype="https://schema.org/ListItem" itemprop="itemListElement"><span itemprop="name">Homes</span><meta itemprop="position" content="2"></li>
           </ol>
           <div class="topbar-area topbar-area-end" data-area="end">
             <div class="topbar-button topbar-button-prev" data-content-empty="disable" data-width-s="show" data-width-m="show" data-width-l="show"><a class="topbar-control" href="/static-jank-site/index.html" title="Skylar Houghton (🡐)"><i class="fa-fw fas fa-chevron-left"></i></a>
@@ -91,14 +91,31 @@
       <div id="R-main-overlay"></div>
       <main id="R-body-inner" class="highlightable default" tabindex="-1">
         <div class="flex-block-wrapper">
-          <article>
+          <article class="default">
             <header class="headline">
             </header>
-<h1 id="categories">Categories</h1>
+<h1 id="homes">Homes</h1>
+
+<h2 id="create-this-page">Create this Page</h2>
+<p>You need to create a file for this page. You can either</p>
+<ul>
+<li>create a file in the <code>content</code> folder and fill it with Markdown content
+<ul>
+<li>inside a folder named by the page&rsquo;s title like <code>&lt;TITLE&gt;/_index.md</code> or <code>&lt;TITLE&gt;/index.md</code></li>
+<li>named by the page&rsquo;s title like <code>&lt;TITLE&gt;.md</code></li>
+</ul>
+</li>
+<li>create a file in the <code>static</code> folder and fill it with HTML content
+<ul>
+<li>inside a folder named by the page&rsquo;s title like <code>&lt;TITLE&gt;/index.html</code></li>
+</ul>
+</li>
+</ul>
 
             <footer class="footline">
             </footer>
-          </article>        </div>
+          </article>
+        </div>
       </main>
     </div>
     <aside id="R-sidebar" class="default-animation">
@@ -199,8 +216,8 @@
       <div id="R-content-wrapper" class="highlightable">
         <div id="R-topics">
           <ul class="enlarge morespace collapsible-menu">
-          <li data-nav-id="/static-jank-site/home/index.html" class=""><a class="padding" href="/static-jank-site/home/index.html">Home</a></li>
-          <li data-nav-id="/static-jank-site/home/index.html" class=""><a class="padding" href="/static-jank-site/home/index.html">Homes</a><ul id="R-subsections-d670de0031b1ee5020f70f3474f94f6c" class="morespace collapsible-menu">
+          <li data-nav-id="/static-jank-site/home/index.html" class="active"><a class="padding" href="/static-jank-site/home/index.html">Home</a></li>
+          <li data-nav-id="/static-jank-site/home/index.html" class="active parent "><a class="padding" href="/static-jank-site/home/index.html">Homes</a><ul id="R-subsections-d670de0031b1ee5020f70f3474f94f6c" class="morespace collapsible-menu">
           <li data-nav-id="/static-jank-site/home/test2/index.html" class=""><a class="padding" href="/static-jank-site/home/test2/index.html">Article1</a></li></ul></li>
           </ul>
         </div>
@@ -255,6 +272,10 @@
     </aside>
     <script src="/static-jank-site/js/clipboard.min.js?1703043252" defer></script>
     <script src="/static-jank-site/js/perfect-scrollbar.min.js?1703043252" defer></script>
+    <script src="/static-jank-site/js/theme.js?1703043252" defer></script>
+  </body>
+</html>
+  <script src="/static-jank-site/js/perfect-scrollbar.min.js?1703043252" defer></script>
     <script src="/static-jank-site/js/theme.js?1703043252" defer></script>
   </body>
 </html>
