--- a/index.html
+++ b/index.html
@@ -18,19 +18,19 @@
     <title>Skylar Houghton</title>
     <link href="/static-jank-site/index.xml" rel="alternate" type="application/rss+xml" title="Skylar Houghton">
     <!-- https://github.com/filamentgroup/loadCSS/blob/master/README.md#how-to-use -->
-    <link href="/static-jank-site/css/fontawesome-all.min.css?1703043252" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/static-jank-site/css/fontawesome-all.min.css?1703043252" rel="stylesheet"></noscript>
-    <link href="/static-jank-site/css/nucleus.css?1703043252" rel="stylesheet">
-    <link href="/static-jank-site/css/auto-complete.css?1703043252" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/static-jank-site/css/auto-complete.css?1703043252" rel="stylesheet"></noscript>
-    <link href="/static-jank-site/css/perfect-scrollbar.min.css?1703043252" rel="stylesheet">
-    <link href="/static-jank-site/css/fonts.css?1703043252" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/static-jank-site/css/fonts.css?1703043252" rel="stylesheet"></noscript>
-    <link href="/static-jank-site/css/theme.css?1703043252" rel="stylesheet">
-    <link href="/static-jank-site/css/theme-auto.css?1703043252" rel="stylesheet" id="R-variant-style">
-    <link href="/static-jank-site/css/chroma-auto.css?1703043252" rel="stylesheet" id="R-variant-chroma-style">
-    <link href="/static-jank-site/css/variant.css?1703043252" rel="stylesheet">
-    <link href="/static-jank-site/css/print.css?1703043252" rel="stylesheet" media="print">
-    <link href="/static-jank-site/css/ie.css?1703043252" rel="stylesheet">
-    <script src="/static-jank-site/js/url.js?1703043252"></script>
-    <script src="/static-jank-site/js/variant.js?1703043252"></script>
+    <link href="/static-jank-site/css/fontawesome-all.min.css?1703043758" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/static-jank-site/css/fontawesome-all.min.css?1703043758" rel="stylesheet"></noscript>
+    <link href="/static-jank-site/css/nucleus.css?1703043758" rel="stylesheet">
+    <link href="/static-jank-site/css/auto-complete.css?1703043758" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/static-jank-site/css/auto-complete.css?1703043758" rel="stylesheet"></noscript>
+    <link href="/static-jank-site/css/perfect-scrollbar.min.css?1703043758" rel="stylesheet">
+    <link href="/static-jank-site/css/fonts.css?1703043758" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/static-jank-site/css/fonts.css?1703043758" rel="stylesheet"></noscript>
+    <link href="/static-jank-site/css/theme.css?1703043758" rel="stylesheet">
+    <link href="/static-jank-site/css/theme-auto.css?1703043758" rel="stylesheet" id="R-variant-style">
+    <link href="/static-jank-site/css/chroma-auto.css?1703043758" rel="stylesheet" id="R-variant-chroma-style">
+    <link href="/static-jank-site/css/variant.css?1703043758" rel="stylesheet">
+    <link href="/static-jank-site/css/print.css?1703043758" rel="stylesheet" media="print">
+    <link href="/static-jank-site/css/ie.css?1703043758" rel="stylesheet">
+    <script src="/static-jank-site/js/url.js?1703043758"></script>
+    <script src="/static-jank-site/js/variant.js?1703043758"></script>
     <script>
       // hack to let hugo tell us how to get to the root when using relativeURLs, it needs to be called *url= for it to do its magic:
       // https://github.com/gohugoio/hugo/blob/145b3fcce35fbac25c7033c91c1b7ae6d1179da8/transform/urlreplacers/absurlreplacer.go#L72
@@ -74,7 +74,7 @@
           <div class="topbar-area topbar-area-end" data-area="end">
             <div class="topbar-button topbar-button-prev" data-content-empty="disable" data-width-s="show" data-width-m="show" data-width-l="show"><span class="topbar-control"><i class="fa-fw fas fa-chevron-left"></i></span>
             </div>
-            <div class="topbar-button topbar-button-next" data-content-empty="disable" data-width-s="show" data-width-m="show" data-width-l="show"><a class="topbar-control" href="/static-jank-site/home/index.html" title="Home (🡒)"><i class="fa-fw fas fa-chevron-right"></i></a>
+            <div class="topbar-button topbar-button-next" data-content-empty="disable" data-width-s="show" data-width-m="show" data-width-l="show"><a class="topbar-control" href="/static-jank-site/index.html" title="Home (🡒)"><i class="fa-fw fas fa-chevron-right"></i></a>
             </div>
             <div class="topbar-button topbar-button-more" data-content-empty="hide" data-width-s="show" data-width-m="show" data-width-l="show"><button class="topbar-control" onclick="toggleTopbarFlyout(this)" type="button" title="More"><i class="fa-fw fas fa-ellipsis-v"></i></button>
               <div class="topbar-content">
@@ -93,23 +93,11 @@
           <article class="default">
             <header class="headline">
             </header>
-<h1 id="skylar-houghton">Skylar Houghton</h1>
+<h1 id="home">Home</h1>
 
-<h2 id="create-this-page">Create this Page</h2>
-<p>You need to create a file for this page. You can either</p>
-<ul>
-<li>create a file in the <code>content</code> folder and fill it with Markdown content
-<ul>
-<li>inside a folder named by the page&rsquo;s title like <code>&lt;TITLE&gt;/_index.md</code> or <code>&lt;TITLE&gt;/index.md</code></li>
-<li>named by the page&rsquo;s title like <code>&lt;TITLE&gt;.md</code></li>
-</ul>
-</li>
-<li>create a file in the <code>static</code> folder and fill it with HTML content
-<ul>
-<li>inside a folder named by the page&rsquo;s title like <code>&lt;TITLE&gt;/index.html</code></li>
-</ul>
-</li>
-</ul>
+<p>Test Page
+test
+e</p>
 
             <footer class="footline">
             </footer>
@@ -199,12 +187,12 @@
         <script>
           var contentLangs=['en'];
         </script>
-        <script src="/static-jank-site/js/auto-complete.js?1703043252" defer></script>
-        <script src="/static-jank-site/js/lunr/lunr.min.js?1703043252" defer></script>
-        <script src="/static-jank-site/js/lunr/lunr.stemmer.support.min.js?1703043252" defer></script>
-        <script src="/static-jank-site/js/lunr/lunr.multi.min.js?1703043252" defer></script>
-        <script src="/static-jank-site/js/lunr/lunr.en.min.js?1703043252" defer></script>
-        <script src="/static-jank-site/js/search.js?1703043252" defer></script>
+        <script src="/static-jank-site/js/auto-complete.js?1703043758" defer></script>
+        <script src="/static-jank-site/js/lunr/lunr.min.js?1703043758" defer></script>
+        <script src="/static-jank-site/js/lunr/lunr.stemmer.support.min.js?1703043758" defer></script>
+        <script src="/static-jank-site/js/lunr/lunr.multi.min.js?1703043758" defer></script>
+        <script src="/static-jank-site/js/lunr/lunr.en.min.js?1703043758" defer></script>
+        <script src="/static-jank-site/js/search.js?1703043758" defer></script>
       </div>
       <div id="R-homelinks" class="default-animation homelinks">
         <ul>
@@ -215,9 +203,7 @@
       <div id="R-content-wrapper" class="highlightable">
         <div id="R-topics">
           <ul class="enlarge morespace collapsible-menu">
-          <li data-nav-id="/static-jank-site/home/index.html" class=""><a class="padding" href="/static-jank-site/home/index.html">Home</a></li>
-          <li data-nav-id="/static-jank-site/home/index.html" class=""><a class="padding" href="/static-jank-site/home/index.html">Homes</a><ul id="R-subsections-d670de0031b1ee5020f70f3474f94f6c" class="morespace collapsible-menu">
-          <li data-nav-id="/static-jank-site/home/test2/index.html" class=""><a class="padding" href="/static-jank-site/home/test2/index.html">Article1</a></li></ul></li>
+          <li data-nav-id="/static-jank-site/index.html" class="active"><a class="padding" href="/static-jank-site/index.html">Home</a></li>
           </ul>
         </div>
         <div class="padding footermargin footerLangSwitch footerVariantSwitch footerVisitedLinks footerFooter showFooter"></div>
@@ -269,8 +255,8 @@
         </div>
       </div>
     </aside>
-    <script src="/static-jank-site/js/clipboard.min.js?1703043252" defer></script>
-    <script src="/static-jank-site/js/perfect-scrollbar.min.js?1703043252" defer></script>
-    <script src="/static-jank-site/js/theme.js?1703043252" defer></script>
+    <script src="/static-jank-site/js/clipboard.min.js?1703043758" defer></script>
+    <script src="/static-jank-site/js/perfect-scrollbar.min.js?1703043758" defer></script>
+    <script src="/static-jank-site/js/theme.js?1703043758" defer></script>
   </body>
 </html>
