--- a/index.html
+++ b/index.html
@@ -18,19 +18,19 @@
     <title>Skylar Houghton</title>
     <link href="/static-jank-site/index.xml" rel="alternate" type="application/rss+xml" title="Skylar Houghton">
     <!-- https://github.com/filamentgroup/loadCSS/blob/master/README.md#how-to-use -->
-    <link href="/static-jank-site/css/fontawesome-all.min.css?1703043758" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/static-jank-site/css/fontawesome-all.min.css?1703043758" rel="stylesheet"></noscript>
-    <link href="/static-jank-site/css/nucleus.css?1703043758" rel="stylesheet">
-    <link href="/static-jank-site/css/auto-complete.css?1703043758" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/static-jank-site/css/auto-complete.css?1703043758" rel="stylesheet"></noscript>
-    <link href="/static-jank-site/css/perfect-scrollbar.min.css?1703043758" rel="stylesheet">
-    <link href="/static-jank-site/css/fonts.css?1703043758" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/static-jank-site/css/fonts.css?1703043758" rel="stylesheet"></noscript>
-    <link href="/static-jank-site/css/theme.css?1703043758" rel="stylesheet">
-    <link href="/static-jank-site/css/theme-auto.css?1703043758" rel="stylesheet" id="R-variant-style">
-    <link href="/static-jank-site/css/chroma-auto.css?1703043758" rel="stylesheet" id="R-variant-chroma-style">
-    <link href="/static-jank-site/css/variant.css?1703043758" rel="stylesheet">
-    <link href="/static-jank-site/css/print.css?1703043758" rel="stylesheet" media="print">
-    <link href="/static-jank-site/css/ie.css?1703043758" rel="stylesheet">
-    <script src="/static-jank-site/js/url.js?1703043758"></script>
-    <script src="/static-jank-site/js/variant.js?1703043758"></script>
+    <link href="/static-jank-site/css/fontawesome-all.min.css?1703043891" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/static-jank-site/css/fontawesome-all.min.css?1703043891" rel="stylesheet"></noscript>
+    <link href="/static-jank-site/css/nucleus.css?1703043891" rel="stylesheet">
+    <link href="/static-jank-site/css/auto-complete.css?1703043891" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/static-jank-site/css/auto-complete.css?1703043891" rel="stylesheet"></noscript>
+    <link href="/static-jank-site/css/perfect-scrollbar.min.css?1703043891" rel="stylesheet">
+    <link href="/static-jank-site/css/fonts.css?1703043891" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/static-jank-site/css/fonts.css?1703043891" rel="stylesheet"></noscript>
+    <link href="/static-jank-site/css/theme.css?1703043891" rel="stylesheet">
+    <link href="/static-jank-site/css/theme-auto.css?1703043891" rel="stylesheet" id="R-variant-style">
+    <link href="/static-jank-site/css/chroma-auto.css?1703043891" rel="stylesheet" id="R-variant-chroma-style">
+    <link href="/static-jank-site/css/variant.css?1703043891" rel="stylesheet">
+    <link href="/static-jank-site/css/print.css?1703043891" rel="stylesheet" media="print">
+    <link href="/static-jank-site/css/ie.css?1703043891" rel="stylesheet">
+    <script src="/static-jank-site/js/url.js?1703043891"></script>
+    <script src="/static-jank-site/js/variant.js?1703043891"></script>
     <script>
       // hack to let hugo tell us how to get to the root when using relativeURLs, it needs to be called *url= for it to do its magic:
       // https://github.com/gohugoio/hugo/blob/145b3fcce35fbac25c7033c91c1b7ae6d1179da8/transform/urlreplacers/absurlreplacer.go#L72
@@ -93,11 +93,23 @@
           <article class="default">
             <header class="headline">
             </header>
-<h1 id="home">Home</h1>
+<h1 id="skylar-houghton">Skylar Houghton</h1>
 
-<p>Test Page
-test
-e</p>
+<h2 id="create-this-page">Create this Page</h2>
+<p>You need to create a file for this page. You can either</p>
+<ul>
+<li>create a file in the <code>content</code> folder and fill it with Markdown content
+<ul>
+<li>inside a folder named by the page&rsquo;s title like <code>&lt;TITLE&gt;/_index.md</code> or <code>&lt;TITLE&gt;/index.md</code></li>
+<li>named by the page&rsquo;s title like <code>&lt;TITLE&gt;.md</code></li>
+</ul>
+</li>
+<li>create a file in the <code>static</code> folder and fill it with HTML content
+<ul>
+<li>inside a folder named by the page&rsquo;s title like <code>&lt;TITLE&gt;/index.html</code></li>
+</ul>
+</li>
+</ul>
 
             <footer class="footline">
             </footer>
@@ -187,12 +199,12 @@ e</p>
         <script>
           var contentLangs=['en'];
         </script>
-        <script src="/static-jank-site/js/auto-complete.js?1703043758" defer></script>
-        <script src="/static-jank-site/js/lunr/lunr.min.js?1703043758" defer></script>
-        <script src="/static-jank-site/js/lunr/lunr.stemmer.support.min.js?1703043758" defer></script>
-        <script src="/static-jank-site/js/lunr/lunr.multi.min.js?1703043758" defer></script>
-        <script src="/static-jank-site/js/lunr/lunr.en.min.js?1703043758" defer></script>
-        <script src="/static-jank-site/js/search.js?1703043758" defer></script>
+        <script src="/static-jank-site/js/auto-complete.js?1703043891" defer></script>
+        <script src="/static-jank-site/js/lunr/lunr.min.js?1703043891" defer></script>
+        <script src="/static-jank-site/js/lunr/lunr.stemmer.support.min.js?1703043891" defer></script>
+        <script src="/static-jank-site/js/lunr/lunr.multi.min.js?1703043891" defer></script>
+        <script src="/static-jank-site/js/lunr/lunr.en.min.js?1703043891" defer></script>
+        <script src="/static-jank-site/js/search.js?1703043891" defer></script>
       </div>
       <div id="R-homelinks" class="default-animation homelinks">
         <ul>
@@ -255,8 +267,8 @@ e</p>
         </div>
       </div>
     </aside>
-    <script src="/static-jank-site/js/clipboard.min.js?1703043758" defer></script>
-    <script src="/static-jank-site/js/perfect-scrollbar.min.js?1703043758" defer></script>
-    <script src="/static-jank-site/js/theme.js?1703043758" defer></script>
+    <script src="/static-jank-site/js/clipboard.min.js?1703043891" defer></script>
+    <script src="/static-jank-site/js/perfect-scrollbar.min.js?1703043891" defer></script>
+    <script src="/static-jank-site/js/theme.js?1703043891" defer></script>
   </body>
 </html>
