--- a/index.html
+++ b/index.html
@@ -18,19 +18,19 @@
     <title>Skylar Houghton</title>
     <link href="/static-jank-site/index.xml" rel="alternate" type="application/rss+xml" title="Skylar Houghton">
     <!-- https://github.com/filamentgroup/loadCSS/blob/master/README.md#how-to-use -->
-    <link href="/static-jank-site/css/fontawesome-all.min.css?1703044050" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/static-jank-site/css/fontawesome-all.min.css?1703044050" rel="stylesheet"></noscript>
-    <link href="/static-jank-site/css/nucleus.css?1703044050" rel="stylesheet">
-    <link href="/static-jank-site/css/auto-complete.css?1703044050" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/static-jank-site/css/auto-complete.css?1703044050" rel="stylesheet"></noscript>
-    <link href="/static-jank-site/css/perfect-scrollbar.min.css?1703044050" rel="stylesheet">
-    <link href="/static-jank-site/css/fonts.css?1703044050" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/static-jank-site/css/fonts.css?1703044050" rel="stylesheet"></noscript>
-    <link href="/static-jank-site/css/theme.css?1703044050" rel="stylesheet">
-    <link href="/static-jank-site/css/theme-auto.css?1703044050" rel="stylesheet" id="R-variant-style">
-    <link href="/static-jank-site/css/chroma-auto.css?1703044050" rel="stylesheet" id="R-variant-chroma-style">
-    <link href="/static-jank-site/css/variant.css?1703044050" rel="stylesheet">
-    <link href="/static-jank-site/css/print.css?1703044050" rel="stylesheet" media="print">
-    <link href="/static-jank-site/css/ie.css?1703044050" rel="stylesheet">
-    <script src="/static-jank-site/js/url.js?1703044050"></script>
-    <script src="/static-jank-site/js/variant.js?1703044050"></script>
+    <link href="/static-jank-site/css/fontawesome-all.min.css?1703383360" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/static-jank-site/css/fontawesome-all.min.css?1703383360" rel="stylesheet"></noscript>
+    <link href="/static-jank-site/css/nucleus.css?1703383360" rel="stylesheet">
+    <link href="/static-jank-site/css/auto-complete.css?1703383360" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/static-jank-site/css/auto-complete.css?1703383360" rel="stylesheet"></noscript>
+    <link href="/static-jank-site/css/perfect-scrollbar.min.css?1703383360" rel="stylesheet">
+    <link href="/static-jank-site/css/fonts.css?1703383360" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/static-jank-site/css/fonts.css?1703383360" rel="stylesheet"></noscript>
+    <link href="/static-jank-site/css/theme.css?1703383360" rel="stylesheet">
+    <link href="/static-jank-site/css/theme-auto.css?1703383360" rel="stylesheet" id="R-variant-style">
+    <link href="/static-jank-site/css/chroma-auto.css?1703383360" rel="stylesheet" id="R-variant-chroma-style">
+    <link href="/static-jank-site/css/variant.css?1703383360" rel="stylesheet">
+    <link href="/static-jank-site/css/print.css?1703383360" rel="stylesheet" media="print">
+    <link href="/static-jank-site/css/ie.css?1703383360" rel="stylesheet">
+    <script src="/static-jank-site/js/url.js?1703383360"></script>
+    <script src="/static-jank-site/js/variant.js?1703383360"></script>
     <script>
       // hack to let hugo tell us how to get to the root when using relativeURLs, it needs to be called *url= for it to do its magic:
       // https://github.com/gohugoio/hugo/blob/145b3fcce35fbac25c7033c91c1b7ae6d1179da8/transform/urlreplacers/absurlreplacer.go#L72
@@ -74,7 +74,7 @@
           <div class="topbar-area topbar-area-end" data-area="end">
             <div class="topbar-button topbar-button-prev" data-content-empty="disable" data-width-s="show" data-width-m="show" data-width-l="show"><span class="topbar-control"><i class="fa-fw fas fa-chevron-left"></i></span>
             </div>
-            <div class="topbar-button topbar-button-next" data-content-empty="disable" data-width-s="show" data-width-m="show" data-width-l="show"><a class="topbar-control" href="/static-jank-site/articles/index.html" title="Article1 (🡒)"><i class="fa-fw fas fa-chevron-right"></i></a>
+            <div class="topbar-button topbar-button-next" data-content-empty="disable" data-width-s="show" data-width-m="show" data-width-l="show"><a class="topbar-control" href="/static-jank-site/bio/index.html" title="Bios (🡒)"><i class="fa-fw fas fa-chevron-right"></i></a>
             </div>
             <div class="topbar-button topbar-button-more" data-content-empty="hide" data-width-s="show" data-width-m="show" data-width-l="show"><button class="topbar-control" onclick="toggleTopbarFlyout(this)" type="button" title="More"><i class="fa-fw fas fa-ellipsis-v"></i></button>
               <div class="topbar-content">
@@ -199,12 +199,12 @@
         <script>
           var contentLangs=['en'];
         </script>
-        <script src="/static-jank-site/js/auto-complete.js?1703044050" defer></script>
-        <script src="/static-jank-site/js/lunr/lunr.min.js?1703044050" defer></script>
-        <script src="/static-jank-site/js/lunr/lunr.stemmer.support.min.js?1703044050" defer></script>
-        <script src="/static-jank-site/js/lunr/lunr.multi.min.js?1703044050" defer></script>
-        <script src="/static-jank-site/js/lunr/lunr.en.min.js?1703044050" defer></script>
-        <script src="/static-jank-site/js/search.js?1703044050" defer></script>
+        <script src="/static-jank-site/js/auto-complete.js?1703383360" defer></script>
+        <script src="/static-jank-site/js/lunr/lunr.min.js?1703383360" defer></script>
+        <script src="/static-jank-site/js/lunr/lunr.stemmer.support.min.js?1703383360" defer></script>
+        <script src="/static-jank-site/js/lunr/lunr.multi.min.js?1703383360" defer></script>
+        <script src="/static-jank-site/js/lunr/lunr.en.min.js?1703383360" defer></script>
+        <script src="/static-jank-site/js/search.js?1703383360" defer></script>
       </div>
       <div id="R-homelinks" class="default-animation homelinks">
         <ul>
@@ -215,7 +215,9 @@
       <div id="R-content-wrapper" class="highlightable">
         <div id="R-topics">
           <ul class="enlarge morespace collapsible-menu">
-          <li data-nav-id="/static-jank-site/articles/index.html" class=""><a class="padding" href="/static-jank-site/articles/index.html">Article1</a></li>
+          <li data-nav-id="/static-jank-site/bio/index.html" class=""><a class="padding" href="/static-jank-site/bio/index.html">Bios</a><ul id="R-subsections-05b386085ed040b30ad423ec0b9ae9ba" class="morespace collapsible-menu">
+          <li data-nav-id="/static-jank-site/bio/who_i_am/index.html" class=""><a class="padding" href="/static-jank-site/bio/who_i_am/index.html">Who I Am</a></li>
+          <li data-nav-id="/static-jank-site/bio/what_i_do/index.html" class=""><a class="padding" href="/static-jank-site/bio/what_i_do/index.html">What I Do</a></li></ul></li>
           </ul>
         </div>
         <div class="padding footermargin footerLangSwitch footerVariantSwitch footerVisitedLinks footerFooter showFooter"></div>
@@ -267,8 +269,8 @@
         </div>
       </div>
     </aside>
-    <script src="/static-jank-site/js/clipboard.min.js?1703044050" defer></script>
-    <script src="/static-jank-site/js/perfect-scrollbar.min.js?1703044050" defer></script>
-    <script src="/static-jank-site/js/theme.js?1703044050" defer></script>
+    <script src="/static-jank-site/js/clipboard.min.js?1703383360" defer></script>
+    <script src="/static-jank-site/js/perfect-scrollbar.min.js?1703383360" defer></script>
+    <script src="/static-jank-site/js/theme.js?1703383360" defer></script>
   </body>
 </html>
