--- a/index.html
+++ b/index.html
@@ -8,32 +8,34 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:title" content="Skylar Houghton">
+    <meta name="twitter:title" content="Home :: Skylar Houghton">
     <meta name="twitter:description" content="">
-    <meta property="og:title" content="Skylar Houghton">
+    <meta property="og:title" content="Home :: Skylar Houghton">
     <meta property="og:description" content="">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://skylarhoughtongithub.github.io/static-jank-site/index.html">
     <meta property="og:site_name" content="Skylar Houghton">
-    <title>Skylar Houghton</title>
-    <link href="/static-jank-site/index.xml" rel="alternate" type="application/rss+xml" title="Skylar Houghton">
+    <title>Home :: Skylar Houghton</title>
+    <link href="/static-jank-site/index.xml" rel="alternate" type="application/rss+xml" title="Home :: Skylar Houghton"><link rel="icon" href="/images/favicon.png" type="image/png">
+
     <!-- https://github.com/filamentgroup/loadCSS/blob/master/README.md#how-to-use -->
-    <link href="/static-jank-site/css/fontawesome-all.min.css?1703383360" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/static-jank-site/css/fontawesome-all.min.css?1703383360" rel="stylesheet"></noscript>
-    <link href="/static-jank-site/css/nucleus.css?1703383360" rel="stylesheet">
-    <link href="/static-jank-site/css/auto-complete.css?1703383360" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/static-jank-site/css/auto-complete.css?1703383360" rel="stylesheet"></noscript>
-    <link href="/static-jank-site/css/perfect-scrollbar.min.css?1703383360" rel="stylesheet">
-    <link href="/static-jank-site/css/fonts.css?1703383360" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/static-jank-site/css/fonts.css?1703383360" rel="stylesheet"></noscript>
-    <link href="/static-jank-site/css/theme.css?1703383360" rel="stylesheet">
-    <link href="/static-jank-site/css/theme-auto.css?1703383360" rel="stylesheet" id="R-variant-style">
-    <link href="/static-jank-site/css/chroma-auto.css?1703383360" rel="stylesheet" id="R-variant-chroma-style">
-    <link href="/static-jank-site/css/variant.css?1703383360" rel="stylesheet">
-    <link href="/static-jank-site/css/print.css?1703383360" rel="stylesheet" media="print">
-    <link href="/static-jank-site/css/ie.css?1703383360" rel="stylesheet">
-    <script src="/static-jank-site/js/url.js?1703383360"></script>
-    <script src="/static-jank-site/js/variant.js?1703383360"></script>
+    <link href="/static-jank-site/css/fontawesome-all.min.css?1703432357" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/static-jank-site/css/fontawesome-all.min.css?1703432357" rel="stylesheet"></noscript>
+    <link href="/static-jank-site/css/nucleus.css?1703432357" rel="stylesheet">
+    <link href="/static-jank-site/css/auto-complete.css?1703432357" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/static-jank-site/css/auto-complete.css?1703432357" rel="stylesheet"></noscript>
+    <link href="/static-jank-site/css/perfect-scrollbar.min.css?1703432357" rel="stylesheet">
+    <link href="/static-jank-site/css/fonts.css?1703432357" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/static-jank-site/css/fonts.css?1703432357" rel="stylesheet"></noscript>
+    <link href="/static-jank-site/css/theme.css?1703432357" rel="stylesheet">
+    <link href="/static-jank-site/css/theme-auto.css?1703432357" rel="stylesheet" id="R-variant-style">
+    <link href="/static-jank-site/css/chroma-auto.css?1703432357" rel="stylesheet" id="R-variant-chroma-style">
+    <link href="/static-jank-site/css/variant.css?1703432357" rel="stylesheet">
+    <link href="/static-jank-site/css/print.css?1703432357" rel="stylesheet" media="print">
+    <link href="/static-jank-site/css/ie.css?1703432357" rel="stylesheet">
+    <script src="/static-jank-site/js/url.js?1703432357"></script>
+    <script src="/static-jank-site/js/variant.js?1703432357"></script>
     <script>
       // hack to let hugo tell us how to get to the root when using relativeURLs, it needs to be called *url= for it to do its magic:
       // https://github.com/gohugoio/hugo/blob/145b3fcce35fbac25c7033c91c1b7ae6d1179da8/transform/urlreplacers/absurlreplacer.go#L72
+      window.index_js_url="/static-jank-site/index.search.js";
       var root_url="/";
       var baseUri=root_url.replace(/\/$/, '');
       window.relearn = window.relearn || {};
@@ -69,12 +71,12 @@
             </div>
           </div>
           <ol class="topbar-breadcrumbs breadcrumbs highlightable" itemscope itemtype="http://schema.org/BreadcrumbList"><li
-            itemscope itemtype="https://schema.org/ListItem" itemprop="itemListElement"><span itemprop="name">Skylar Houghton</span><meta itemprop="position" content="1"></li>
+            itemscope itemtype="https://schema.org/ListItem" itemprop="itemListElement"><span itemprop="name">Home</span><meta itemprop="position" content="1"></li>
           </ol>
           <div class="topbar-area topbar-area-end" data-area="end">
             <div class="topbar-button topbar-button-prev" data-content-empty="disable" data-width-s="show" data-width-m="show" data-width-l="show"><span class="topbar-control"><i class="fa-fw fas fa-chevron-left"></i></span>
             </div>
-            <div class="topbar-button topbar-button-next" data-content-empty="disable" data-width-s="show" data-width-m="show" data-width-l="show"><a class="topbar-control" href="/static-jank-site/bio/index.html" title="Bios (🡒)"><i class="fa-fw fas fa-chevron-right"></i></a>
+            <div class="topbar-button topbar-button-next" data-content-empty="disable" data-width-s="show" data-width-m="show" data-width-l="show"><a class="topbar-control" href="/static-jank-site/bio/index.html" title="Bio (🡒)"><i class="fa-fw fas fa-chevron-right"></i></a>
             </div>
             <div class="topbar-button topbar-button-more" data-content-empty="hide" data-width-s="show" data-width-m="show" data-width-l="show"><button class="topbar-control" onclick="toggleTopbarFlyout(this)" type="button" title="More"><i class="fa-fw fas fa-ellipsis-v"></i></button>
               <div class="topbar-content">
@@ -88,28 +90,13 @@
         </div>
       </nav>
       <div id="R-main-overlay"></div>
-      <main id="R-body-inner" class="highlightable default" tabindex="-1">
+      <main id="R-body-inner" class="highlightable home" tabindex="-1">
         <div class="flex-block-wrapper">
-          <article class="default">
+          <article class="home">
             <header class="headline">
             </header>
-<h1 id="skylar-houghton">Skylar Houghton</h1>
+<h1 id="home">Home</h1>
 
-<h2 id="create-this-page">Create this Page</h2>
-<p>You need to create a file for this page. You can either</p>
-<ul>
-<li>create a file in the <code>content</code> folder and fill it with Markdown content
-<ul>
-<li>inside a folder named by the page&rsquo;s title like <code>&lt;TITLE&gt;/_index.md</code> or <code>&lt;TITLE&gt;/index.md</code></li>
-<li>named by the page&rsquo;s title like <code>&lt;TITLE&gt;.md</code></li>
-</ul>
-</li>
-<li>create a file in the <code>static</code> folder and fill it with HTML content
-<ul>
-<li>inside a folder named by the page&rsquo;s title like <code>&lt;TITLE&gt;/index.html</code></li>
-</ul>
-</li>
-</ul>
 
             <footer class="footline">
             </footer>
@@ -199,12 +186,12 @@
         <script>
           var contentLangs=['en'];
         </script>
-        <script src="/static-jank-site/js/auto-complete.js?1703383360" defer></script>
-        <script src="/static-jank-site/js/lunr/lunr.min.js?1703383360" defer></script>
-        <script src="/static-jank-site/js/lunr/lunr.stemmer.support.min.js?1703383360" defer></script>
-        <script src="/static-jank-site/js/lunr/lunr.multi.min.js?1703383360" defer></script>
-        <script src="/static-jank-site/js/lunr/lunr.en.min.js?1703383360" defer></script>
-        <script src="/static-jank-site/js/search.js?1703383360" defer></script>
+        <script src="/static-jank-site/js/auto-complete.js?1703432357" defer></script>
+        <script src="/static-jank-site/js/lunr/lunr.min.js?1703432357" defer></script>
+        <script src="/static-jank-site/js/lunr/lunr.stemmer.support.min.js?1703432357" defer></script>
+        <script src="/static-jank-site/js/lunr/lunr.multi.min.js?1703432357" defer></script>
+        <script src="/static-jank-site/js/lunr/lunr.en.min.js?1703432357" defer></script>
+        <script src="/static-jank-site/js/search.js?1703432357" defer></script>
       </div>
       <div id="R-homelinks" class="default-animation homelinks">
         <ul>
@@ -215,7 +202,7 @@
       <div id="R-content-wrapper" class="highlightable">
         <div id="R-topics">
           <ul class="enlarge morespace collapsible-menu">
-          <li data-nav-id="/static-jank-site/bio/index.html" class=""><a class="padding" href="/static-jank-site/bio/index.html">Bios</a><ul id="R-subsections-05b386085ed040b30ad423ec0b9ae9ba" class="morespace collapsible-menu">
+          <li data-nav-id="/static-jank-site/bio/index.html" class=""><a class="padding" href="/static-jank-site/bio/index.html">Bio</a><ul id="R-subsections-c9d9c79f02d86aa53f11bf72e14957a0" class="morespace collapsible-menu">
           <li data-nav-id="/static-jank-site/bio/who_i_am/index.html" class=""><a class="padding" href="/static-jank-site/bio/who_i_am/index.html">Who I Am</a></li>
           <li data-nav-id="/static-jank-site/bio/what_i_do/index.html" class=""><a class="padding" href="/static-jank-site/bio/what_i_do/index.html">What I Do</a></li></ul></li>
           </ul>
@@ -269,8 +256,8 @@
         </div>
       </div>
     </aside>
-    <script src="/static-jank-site/js/clipboard.min.js?1703383360" defer></script>
-    <script src="/static-jank-site/js/perfect-scrollbar.min.js?1703383360" defer></script>
-    <script src="/static-jank-site/js/theme.js?1703383360" defer></script>
+    <script src="/static-jank-site/js/clipboard.min.js?1703432357" defer></script>
+    <script src="/static-jank-site/js/perfect-scrollbar.min.js?1703432357" defer></script>
+    <script src="/static-jank-site/js/theme.js?1703432357" defer></script>
   </body>
 </html>
