--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <meta property="og:url" content="https://skylarhoughtongithub.github.io/static-jank-site/index.html">
     <meta property="og:site_name" content="Skylar Houghton">
     <title>Home :: Skylar Houghton</title>
-    <link href="/static-jank-site/index.xml" rel="alternate" type="application/rss+xml" title="Home :: Skylar Houghton"><link rel="icon" href="../../images/favicon.png" type="image/png">
+    <link href="/static-jank-site/index.xml" rel="alternate" type="application/rss+xml" title="Home :: Skylar Houghton"><link rel="icon" href="images/favicon.png" type="image/png">
 
     <!-- https://github.com/filamentgroup/loadCSS/blob/master/README.md#how-to-use -->
     <link href="/static-jank-site/css/fontawesome-all.min.css?1703448292" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/static-jank-site/css/fontawesome-all.min.css?1703448292" rel="stylesheet"></noscript>
@@ -108,7 +108,7 @@
       <div id="R-header-topbar" class="default-animation"></div>
       <div id="R-header-wrapper" class="default-animation">
         <div id="R-header" class="default-animation">
-<img src="../../images/rooster.png">
+<img src="images/rooster.png">
         </div>
         <div class="searchbox default-animation">
           <i class="fas fa-search" title="Search (CTRL+ALT+f)"></i>
